--- a/style.css
+++ b/style.css
@@ -344,3 +344,30 @@ label {
   font-weight: bold;
   vertical-align: middle;
 }
+
+.loading-screen {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+
+.loading-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    font-size: 1.5em;
+}
+
+.loading-content img {
+    width: 50px; /* Tamaño del ícono de carga */
+    margin-top: 20px;
+}
+
